<resources>

    <string name="app_name">陌陌红包助手</string>
    <string name="app_description">\n\n使用指南 \n  ○ 开启服务\n ○ 返回红包助手\n ○ 坐等红包进账\n\n</string>
    <string name="turn_on_toast">点击「陌陌红包助手 开启服务」</string>
    <string name="service_is_connected">服务已开启</string>
    <string name="service_un_connected">服务尚未开启</string>
    <string name="start_service">开启服务</string>
    <string name="history">查看红包记录</string>
    <string name="history_activity">红包记录</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="amount">金额</string>
</resources>