<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolBarTitleStyle"
        app:titleTextColor="@color/white" />


    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:divider="@drawable/shape_divider"
        android:orientation="vertical"
        android:showDividers="beginning|end|middle">

        <LinearLayout
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_item_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_start_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="25dp"
                android:text="@string/start_service"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_service_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="25dp"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                tools:text="@string/service_un_connected" />
        </LinearLayout>

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_item_color"
            android:gravity="center_vertical"
            android:padding="25dp"
            android:text="@string/history"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
